fix: add text overlapping issue on the horizantal slider with dots

--- a/src/component/DynamicContentSliderWithLabel/DynamicContentSliderWithLabel.style.scss
+++ b/src/component/DynamicContentSliderWithLabel/DynamicContentSliderWithLabel.style.scss
@@ -122,6 +122,14 @@
       margin-top: 0;
     }
   }
+
+  .megaMenuSliderText {
+    @include mobile {
+      text-overflow: ellipsis;
+      text-wrap: nowrap;
+      overflow: hidden;
+    }
+  }
   &-Label {
     display: flex;
     position: absolute;
