--- a/src/component/MobileMegaMenu/MegaMenuCategories/Components/MegaMenuHorizontalSlider/MegaMenuHorizontalSlider.style.scss
+++ b/src/component/MobileMegaMenu/MegaMenuCategories/Components/MegaMenuHorizontalSlider/MegaMenuHorizontalSlider.style.scss
@@ -1,5 +1,6 @@
 .megemenu-horizantal-slider-container {
     max-height: 136px;
+    margin-top: 10px;
     .DynamicContentSliderWithLabel {
         margin-bottom: 0px !important;
         .SliderHelper {
