--- a/src/route/MobileMegaMenu/MobileMegaMenu.style.scss
+++ b/src/route/MobileMegaMenu/MobileMegaMenu.style.scss
@@ -1,6 +1,6 @@
 .mobile-megamenu-main-container {
   overflow-y: scroll;
-  padding: 102px 10px 80px 10px;
+  padding: 95px 10px 80px 10px;
   overflow: hidden;
 }
 
